[PAIRONE-13] Java 17 improvements